SERVER-29781 Only shutdown TransportLayer if it was successfully created